<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.bukuharianrembang.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.bukuharianrembang.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.bukuharianrembang.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_MenuUtamaFragment"
            app:destination="@id/MenuUtamaFragment" />


    </fragment>
    <fragment
        android:id="@+id/MenuUtamaFragment"
        android:name="com.example.bukuharianrembang.MenuUtamaFragment"
        android:label="@string/menu_utama_fragment_label"
        tools:layout="@layout/fragment_menu_utama">

        <action
            android:id="@+id/action_MenuUtamaFragment_to_EntriAktivitasFragment"
            app:destination="@id/EntriAktivitasFragment" />
    </fragment>

    <fragment
        android:id="@+id/EntriAktivitasFragment"
        android:name="com.example.bukuharianrembang.EntriAktivitasFragment"
        android:label="@string/entri_aktivitas_fragment_label"
        tools:layout="@layout/fragment_entri_aktivitas">
        <action
            android:id="@+id/action_EntriAktivitasFragment_to_MenuUtamaFragment"
            app:destination="@id/MenuUtamaFragment" />

    </fragment>

</navigation>